# umbra

./: .gitattributes  .gitignore  Makefile  pyproject.toml
.github/workflows/: build-push-attestation-service.yml  build-push-auth-service.yml  build-push-cert-manager.yaml  commit-compliance.yaml  cvm-tests.yml  deploy-dev-cvm.yml  deploy-frontend.yml  test-dev-cvm.yml  test-frontend.yml
cvm/: .env_prod  .env_staging  Makefile  docker-compose.dev.override.yml  docker-compose.hs.override.yml  docker-compose.yml  requirements_test.txt  test_cvm.py  test_grafana.py  test_network.py  test_prometheus.py  test_vllm_proxy.py
cvm/app/: Dockerfile.proxy_api  benchmark_backend.csv  proxy_app.py  stats.ipynb  utils.py
cvm/app/data/: tee_info.txt
cvm/attestation-service/: Dockerfile  Makefile  README.md  attestation_service.py  entrypoint.sh  pyproject.toml  test_service.py
cvm/auth-service/: Dockerfile  pyproject.toml
cvm/auth-service/src/auth_service/: main.py
cvm/cert-manager/: .dockerignore  Dockerfile  cert_manager.py  entrypoint.sh  proc_logger.py  pyproject.toml  supervisord.conf
cvm/cert-manager/nginx_conf/: base.conf  https.conf
cvm/cert-manager/src/cert_manager/: certbot.py  cmgr.py  crtsh.py  main.py  supervisor.py
cvm/cert-manager/tests/: test_cmgr.py
cvm/docker/: docker_build.sh  docker_run.sh
cvm/tests/: test_base_vllm.py  test_vllm_proxy.py
cvm/vllm-proxy/: Dockerfile  Makefile  README.md  entrypoint.sh  proxy_app.py  pyproject.toml  test_vllm_proxy.py  utils.py
cvm/vllm-proxy/prompts/: base_instructions_prompt.txt  base_system_prompt.txt  basic_scope_prompt.txt  is_tee_related_prompt.txt  tee_instruction_prompt.txt
cvm/vllm_proxy/: Dockerfile  Makefile  proxy_app.py  pyproject.toml  test_vllm_proxy.py  utils.py
cvm/vllm_proxy/data/: tee_info.txt
cvm/vllm_proxy/prompts/: base_system_prompt.txt  is_tee_related_prompt.txt  tee_instruction_prompt.txt
docs/: architecture.mmd
frontend/: .gitignore  AGENTS.md  Makefile  README.md  components.json  dcap-result.json  eslint.config.mjs  middleware.ts  next.config.mjs  package.json  people.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  template.md  vitest.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/admin/invitations/: page.tsx
frontend/app/admin/waitlist/: client.tsx  page.tsx
frontend/app/api/admin/waitlist/: route.ts
frontend/app/api/admin/waitlist/[id]/: route.ts
frontend/app/api/admin/waitlist/[id]/activate/: route.ts
frontend/app/api/attestation/verify/: route.ts
frontend/app/api/example-docs/[id]/: route.ts
frontend/app/api/feedback/: route.ts
frontend/app/api/form-token/: route.ts
frontend/app/api/pccs/[...path]/: route.ts
frontend/app/api/waitlist/: route.ts
frontend/app/auth/callback/: route.ts
frontend/app/confidential-ai/: page.tsx
frontend/app/sign-in/: page.tsx
frontend/app/test-verify-quote/: page.tsx
frontend/components/: announcement-bar.tsx  auth-dialog.tsx  feedback-button.tsx  force-light-theme.tsx  loading-transition.tsx  markdown.tsx  nav-auth-button.tsx  pre-register-card.tsx  supabase-auth-listener.tsx  theme-provider.tsx
frontend/components/ui/: button.tsx  tabs.tsx
frontend/hooks/: use-form-token.ts
frontend/lib/: attestation-verifier.ts  attestation.ts  auth.ts  confidential-chat.ts  crypto-hash.ts  example-themes.ts  hex.ts  pdf.ts  system-prompt.ts  waitlist.ts
frontend/lib/email/: resend.ts
frontend/lib/email/templates/: waitlist-activation.ts
frontend/lib/security/: form-token.ts  origin.ts  rate-limit.ts  request.ts
frontend/lib/supabase/: client.ts  errors.ts  route-handler.ts  server.ts  service-role.ts  types.ts
frontend/ratls/: Cargo.toml  Makefile  README.md  build-wasm.sh  setup-wasm-toolchain.sh
frontend/ratls/.cargo/: config.toml
frontend/ratls/core/: Cargo.toml  README.md
frontend/ratls/core/src/: lib.rs  protocol.rs  tdx.rs
frontend/ratls/core/tests/: tdx_live.rs
frontend/ratls/core/tests/fixtures/: dice-snp.json  dice-tdx.json
frontend/ratls/docs/: ARCHITECTURE.md
frontend/ratls/node/: Cargo.toml  README.md  build.rs  index.js  package.json  ratls-fetch.js
frontend/ratls/node/examples/: README.md  ai-sdk-openai-demo.mjs
frontend/ratls/node/src/: lib.rs
frontend/ratls/proxy/: Cargo.toml  README.md
frontend/ratls/proxy/src/: main.rs
frontend/ratls/python/: README.md
frontend/ratls/server-examples/tee-snp/: README.md
frontend/ratls/server-examples/tee-tdx/: README.md
frontend/ratls/wasm/: Cargo.toml  README.md  ratls-fetch.d.ts  ratls-fetch.js
frontend/ratls/wasm/examples/: ai-sdk-openai-demo.mjs
frontend/ratls/wasm/src/: lib.rs  transport.rs
frontend/ratls/wasm/vllm-chat/: index.html  main.js  styles.css
frontend/ratls/wasm/web-check/: index.html  main.js  styles.css
frontend/styles/: globals.css
frontend/supabase/: schema.sql
frontend/tests/e2e/: quote-verification.spec.ts  secure-chat.spec.ts
frontend/tests/unit/lib/: attestation-verifier.test.ts  attestation.test.ts
frontend/types/: hast.d.ts  pdfjs-dist.d.ts  pdfjs.d.ts
monitoring/: .env_example  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  prometheus.yml  pyproject.toml
monitoring/Results_benchmarks/: Untitled-1.ipynb
monitoring/bench/: Makefile  config.mk
monitoring/bench/scripts/: bench_tools.py
monitoring/grafana/: Dockerfile
monitoring/grafana/provisioning/dashboards/: dashboards.yaml  hardware_resouces.json  load_saturation.json  machine_metrics_overview.json  machine_metrics_overview.json.template  user_metrics_overview.json  user_metrics_overview.json.template  vllm.json  vllm_latency_overview.json  vllm_throughput.json  vllm_tokens.json.template
monitoring/grafana/provisioning/datasources/: prometheus.yaml
monitoring/prometheus/: Dockerfile  entrypoint.sh  prometheus.yml  prometheus.yml.template
monitoring/scripts/: bench_tools.sh  combine_benchmarks.py
monitoring/tests/: test_grafana.py  test_network.py  test_prometheus.py  valid_vllm_metrics_list.py
scripts/: calc_rtmr3.py  fetch_raw_quote.py  test_rtmr3_consistency.py
