[project]
name = "secure-chat"
version = "0.1.0"
description = ""
authors = [
    {name = "Celia KHERFALLAH",email = "celia.kherfallah@zama.ai"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "prometheus-client (>=0.23.1,<0.24.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
