[project]
name = "attestation-service"
version = "0.1.0"
requires-python = ">=3.10,<3.14"

dependencies = [
    "fastapi[standard]~=0.119",
    "pydantic~=2.7",
    "dstack-sdk==0.5.3",
]

[dependency-groups]
test = [
    "requests",
]

dev = [
    "ruff",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


[tool.ruff.lint.pydocstyle]
convention = "google"
