[project]
name = "vllm_proxy"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "prometheus-client (>=0.23.1,<0.24.0)",
    "httpx>=0.27,<0.29",
    "fastapi[standard]~=0.115.0",
]

[dependency-groups]
test = [
    "pytest (>=8.4.2,<9.0.0)",
    "requests (>=2.32.5,<3.0.0)",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
