[package]
name = "ratls-core"
version = "0.0.1"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
x509-parser = { workspace = true }
hex = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
dcap-qvl = { workspace = true }

[dev-dependencies]
rcgen = "0.12"
ring = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
mockall = "0.12"
