[package]
name = "ratls-core"
version = "0.0.1"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
x509-parser = { version = "0.16", features = ["verify"] }
hex = { workspace = true }
rand = "0.8"
rustls-pki-types = { version = "1", features = ["std", "web"] }
futures = "0.3"
base64 = "0.22"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "aws_lc_rs"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
webpki-roots = "0.26"
dcap-qvl = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "ring"] }
futures-rustls = { version = "0.26", default-features = false, features = ["ring"] }
getrandom = { version = "0.2", features = ["js"] }
web-time = "1.1"
dcap-qvl = { workspace = true, features = ["js"] }

[dev-dependencies]
rcgen = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
