[package]
name = "ratls-node"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ratls-core = { path = "../core" }
napi = { version = "2.16", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = { version = "2.16", features = ["type-def"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "io-util"] }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
once_cell = "1.19"

[build-dependencies]
# napi-build 2.x is compatible with napi v2 and requires rustc >= 1.88
napi-build = "2.3.1"
